[package]
name = "actix-crud-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Actix web framework
actix-web = "4.0"
actix-cors = "0.6.4"

# DB
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
postgres = "0.19.4"
r2d2 = "0.8.10"

# Serde
serde = { version = "1.0", features = ["derive"] }
